third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/lambda_no_param.exp
module 0xdecafbad::m {
    fun bar(f: ||(u64)): u64 {
        f()
    }
    fun foo(f: ||) {
        f();
    }
    public fun one() {
        foo(|()| __lambda__1__one());
    }
    fun __lambda__1__one() {
        ()
    }
    public fun two(x: u64): u64 {
        bar(|()| __lambda__1__two(x))
    }
    fun __lambda__1__two(x: u64): u64 {
        x
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ lambda_no_param.move:9:14
  │
9 │         foo(|()| __lambda__1__one());
  │              ^
  │              │
  │              Unexpected '('
  │              Expected a variable or struct or variant name
